# FirstEngine

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  ALTERNATIVE_EXPORT_SOLUTIONS.md  ARCHITECTURE_RHI.md  BUILD_FIXES.md  BUILD_GUIDE.md  BUILD_INSTRUCTIONS.md  CHECK_VULKAN_DLL.ps1  CIRCULAR_DEPENDENCY_FIX_FINAL.md  CMakeLists.txt  CODE_ANALYSIS.md  COMMANDBUFFER_CONSTRUCTION_FLOW.md  COMMANDBUFFER_FLOW_DIAGRAM.md  COMPLETION_SUMMARY.md  DEBUG_RENDERING_CALLS.md  DEPLOYMENT.md  DIAGNOSE_VULKAN_ISSUE.ps1  DLL_LOADING_DEBUG.md  EDITOR_VS_INTEGRATION.md  FINAL_FIX_SUMMARY.md  FIND_VULKAN_DLL.ps1  FIND_VULKAN_DLL_IN_SDK.ps1  FIX_CPP_DEBUG.md  FIX_DLL_EXPORT.md  FIX_DLL_EXPORT_DEF.md  FIX_DLL_EXPORT_FINAL.md  FRAMEGRAPH_BUILD_TO_COMMANDBUFFER.md  FRAMEGRAPH_DETAILED_FLOW.md  GITHUB_PUSH.md  GITHUB_SETUP.md  GITHUB_SETUP_GUIDE.md  GLFW_DOWNGRADE_COMPLETE.md  GLFW_DOWNGRADE_GUIDE.md  GLFW_INCLUDE_VULKAN_EXPLANATION.md  HEADER_DEPENDENCY_FIXES.md  MODULES.md  PUSH_COMMANDS.md  QUICK_CPP_DEBUG_FIX.md  (+27 more)
Editor/: App.xaml  App.xaml.cs  CMakeLists.txt  DEBUG_BREAKPOINT_FIX.md  DEBUG_GUIDE.md  FIX_DEBUG_PATH.md  FirstEngineEditor.csproj  FirstEngineEditor.csproj.user.absolute  MANUAL_DEBUG_SETUP.md  PROTECT_DEBUG_CONFIG.md  QUICK_DEBUG_STEPS.md  QUICK_FIX.md  QUICK_RESTORE.md  README.md  README_VIEWPORT.md  README_VS_INTEGRATION.md  VIEWPORT_EMBEDDING.md  clean_and_rebuild.ps1  copy_dlls.ps1  restore_debug_config.ps1
Editor/Attributes/: PropertyAttribute.cs
Editor/Controls/: RenderViewportHost.cs
Editor/Converters/: NullToImageSourceConverter.cs  StringToVisibilityConverter.cs
Editor/Models/: Project.cs  ResourceEntry.cs
Editor/Properties/: launchSettings.json
Editor/Services/: EditorAPIService.cs  FileManager.cs  FolderManagementService.cs  IEditorAPIService.cs  IFileManager.cs  IFolderManagementService.cs  IProjectManager.cs  IResourceImportService.cs  ISceneManagementService.cs  ProjectManager.cs  RenderEngineService.cs  ResourceImportService.cs  SceneManagementService.cs  ServiceLocator.cs
Editor/Styles/: CommonStyles.xaml
Editor/Utils/: PropertyReflectionHelper.cs
Editor/ViewModels/: MainViewModel.cs  RelayCommand.cs  ViewModelBase.cs
Editor/Views/: CreateResourceDialog.xaml  CreateResourceDialog.xaml.cs  InputDialog.xaml  InputDialog.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ResourceImportDialog.xaml  ResourceImportDialog.xaml.cs
Editor/docs/: PropertyReflectionSystem.md
Package/: QUICK_REFERENCE.md  README.md  resource_manifest.json
Package/Materials/: Geometry_Material.xml  IBL_Material.xml  Light_Material.xml  PostProcess_Material.xml  README.md  SunLight_Material.xml  Tonemapping_Material.xml  pbr_material.xml
Package/Meshes/: cube_mesh.xml  plane_mesh.xml  sphere_mesh.xml
Package/Models/: MODEL_XML_FORMAT.md  cube_model.xml  geometry_cube_model.xml  ibl_sphere_model.xml  pbr_cube_model.xml  plane_model.xml  sphere_model.xml  sunlight_plane_model.xml
Package/Scenes/: shader_demo_scene.json
Package/Shaders/: BINDING_FIX_SUMMARY.md  IBL.frag.hlsl  (+14 more)
configs/: deferred_rendering.pipeline
docs/: Code_Cleanup_Summary.md  DescriptorSet_Flow.md  DescriptorTypes_Explanation.md  EditAndContinue_Fix.md  FormatMapping_Complete.md  HLSL_Binding_Guide.md  ImageLoader_SupportedFormats.md  Library_Dependency_Audit.md  README.md  RenderDoc_Setup_Guide.md  RenderResource_DataFlow.md  ResourceLoadingFlow.md  ShaderType_Mapping.md  TODO_Status.md  TextureReplacement_Summary.md  VertexFormat_Mapping_Fix.md  VertexFormat_System.md  VertexStructure_Fix.md  Vertex_Refactoring.md  文件名索引.md
scripts/: download_test_textures.ps1  download_test_textures_manual.md  generate_test_textures.ps1  init_submodules.sh
src/Application/: Application.cpp  CMakeLists.txt  RENDERING_PIPELINE.md  RenderApp.cpp  main.cpp
src/Core/: Barrier.cpp  CMakeLists.txt  CommandLine.cpp  ConfigFile.cpp  RenderDoc.cpp  Thread.cpp  ThreadExample.cpp  ThreadManager.cpp  ThreadingExample.cpp  Window.cpp
src/Device/: CMakeLists.txt  DeviceContext.cpp  Framebuffer.cpp  MemoryManager.cpp  Pipeline.cpp  RenderPass.cpp  RenderTarget.cpp  ShaderModule.cpp  Swapchain.cpp  VulkanDevice.cpp  VulkanRHIWrappers.cpp  VulkanRenderer.cpp
src/Editor/: CMakeLists.txt  EditorAPI.cpp  EditorAPI.def
src/Python/: Bindings.cpp  CMakeLists.txt  PythonEngine.cpp  PythonModule.cpp  README.md  README_BINDINGS.md  demo.cpp  demo_python.py
src/RHI/: CMakeLists.txt  RHI.cpp
src/Renderer/: CMakeLists.txt  CommandRecorder.cpp  DeferredRenderPipeline.cpp  FrameGraph.cpp  FrameGraphExecutionPlan.cpp  FrameGraphResourceWrappers.cpp  GeometryPass.cpp  IRenderPass.cpp  IRenderPipeline.cpp  IRenderResource.cpp  LightingPass.cpp  MaterialDescriptorManager.cpp  Pipeline.cpp  PipelineBuilder.cpp  PipelineConfig.cpp  PipelineState.cpp  PostProcessPass.cpp  RenderBatch.cpp  RenderCommandList.cpp  RenderConfig.cpp  RenderContext.cpp  RenderGeometry.cpp  RenderParameterCollector.cpp  RenderPassTypes.cpp  RenderResource.cpp  RenderResourceManager.cpp  RenderTexture.cpp  ResourceDescription.cpp  SceneRenderer.cpp  ShaderCollection.cpp  ShaderCollectionsTools.cpp  ShaderHash.cpp  ShaderModuleTools.cpp  ShadingMaterial.cpp  ShadingState.cpp  Swapchain.cpp  VulkanRenderer.cpp
src/Resources/: CMakeLists.txt  CameraComponent.cpp  Component.cpp  EffectComponent.cpp  Icon.cpp  ImageLoader.cpp  MaterialLoader.cpp  MaterialParameter.cpp  MaterialResource.cpp  MeshLoader.cpp  MeshResource.cpp  ModelComponent.cpp  ModelLoader.cpp  ModelResource.cpp  ResourceDependency.cpp  ResourceID.cpp  ResourceProvider.cpp  ResourceXMLParser.cpp  Scene.cpp  SceneLevel.cpp  TextureLoader.cpp  TextureResource.cpp  VertexFormat.cpp  VertexShaderMatcher.cpp
src/Shader/: CMakeLists.txt  ShaderCompiler.cpp  ShaderLoader.cpp  ShaderSourceCompiler.cpp  example_source_compiler.cpp  example_usage.cpp
src/ShaderManager/: CMakeLists.txt  ShaderManager.cpp  main.cpp
src/Tools/ResourceImport/: CMakeLists.txt  README.md  ResourceImport.cpp  main.cpp
test_glslang/: CMakeLists.txt  README.md  main.cpp  test_glslang.cpp  test_glslang.h  test_main.cpp
(+199 files in other folders)
